--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.current_session_context_class=thread
 spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #allowing put, patch, delete http requests
 spring.mvc.hiddenmethod.filter.enabled=true
+
 
 #logging.level.org.springframework=debug
 #logging.level.org.hibernate=debug
